2004-06-10  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_build_folder_info):
	If flags does not include FOLDER_INFO_FAST, get the total/unread
	counts for the folder-info.

	* providers/imap4/camel-imap4-engine.c (engine_parse_status):
	Removed.
	(camel_imap4_engine_handle_untagged_1): Don't handle untagged
	STATUS responses anymore. Let the STATUS requestor handle them
	instead.

	* providers/imap4/camel-imap4-utils.c
	(camel_imap4_untagged_status): New function to parse untagged
	status events.

2004-06-10  Not Zed  <NotZed@Ximian.com>

	* camel-filter-driver.c (camel_filter_driver_filter_message): add
	some :filter debug.
	(open_folder): only ignore the get_folder exception if we have a
	default folder, otherwise don't.  See #59727.

	* providers/nntp/camel-nntp-store.c (camel_nntp_command): move the
	stream based checking into the loop, after we connect.  Fixes a
	crash.

2004-06-09  Jeffrey Stedfast  <fejj@novell.com>

	* camel-gpg-context.c (gpg_verify): Fixed a case where it was
	possible to double-free the gpg context.
	(gpg_verify): If we don't have a public key, then the signature is
	just BAD always.

2004-06-09  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): Don't assign trust to be
	UNKNOWN if gpg sent us a NODATA status.

2004-06-07  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-folder.c (camel_imap4_folder_new):
	Load the entire summary, not just the summary header. This way
	when the user opens the folder, we don't do a complete re-sync
	with the server unnecessarily.

	* providers/imap4/camel-imap4-summary.c (untagged_fetch_all): New
	info's always have a uid of "", so don't checkagainst NULL.

2004-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-store.c (imap4_rename_folder):
	Implemented, mostly. Still need to update state on the renamed
	folder object if instantiated and rename the on-disk cache
	directory.
